still struggling with the nav bar alignment, ill fix it tomorrow

--- a/g. responsive-projects/landing.css
+++ b/g. responsive-projects/landing.css
@@ -21,7 +21,7 @@ a:hover {
 */
 body {
     min-width: 320px;
-    width: 1600px;
+    max-width: 1600px;
     margin: 0 auto;
 
     font-size: 20px;
@@ -42,27 +42,25 @@ header {
 }
 
 nav {
-    /*
-    position: absolute;
-    top: 0;*/
     display: flex;
-    
-    max-width: 1600px;
-    height: 100%;
-    margin: 0 auto;
-    font-size: 13px;
-    
-    align-content: center;
     justify-content: center;
+    
+    height: 54px;
+    position: relative;
+    top: 0;
+    
+    font-size: 13px;
 }
 
 #logo {
-    position: absolute;
+    
+    position: relative;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     content: "";
+    max-width: 108px;
 }
 
 #logo:hover {
@@ -70,8 +68,8 @@ nav {
     text-decoration: none;
 }
 
-#logo img {
-    width: 108px;
+#header-img {
+    width: 100%;
 }
 
 #logo span {
@@ -86,21 +84,17 @@ nav {
 }
 
 #surface {
-    display: flex;
-    align-content: center;
-}
-
-#nav-main {
-
+    
 }
 
 li {
     display: inline-block;
+    text-align: center;
 }
 
 button {
     background-color: transparent;
-    padding: 16px 24px 16px 15px;
+    padding: 16px 30px 16px 16px;
 
     cursor: pointer;
     border: none;
@@ -116,6 +110,10 @@ span:hover {
 .nav-menu {
     display: flex;
     align-content: center;
+}
+
+#search {
+    height: 32px;
 }
 
 
